# snakecite

./: .gitignore  LICENSE  README.md  pyproject.toml
src/snakecite/: __init__.py  __main__.py  cite.py
tests/: test_cite.py
